[package]
name = "vt-muxer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["io-util", "sync", "net", "rt"] }
replace_with = "0.1.7"
flume = "0.11.1"
parking_lot = "0.12.3"

[dependencies.bytemuck]
version = "1.22.0"
features = [
    "derive",
    "must_cast",
    "must_cast_extra",
    "zeroable_maybe_uninit",
    "min_const_generics"
]

[dev-dependencies]
tokio = { version = "1.44.2", features = ["macros", "time", "rt-multi-thread"] }
rand = "0.9.1"
rand_xoshiro = "0.7.0"
futures = "0.3.31"